bk_ida/gccida/g2/emit_group_load
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/emit_group_load/src/expr.c:2417:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v11; // edi 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/emit_group_load/src/expr.c:2420:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v14; // r9d 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/emit_group_load/src/expr.c:2422:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v16; // r9d 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/emit_group_load/src/expr.c:2441:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v35; // r9d 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/emit_group_load/src/expr.c:2457:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode tmode; // [rsp+34h] [rbp-4Ch] 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/emit_group_load/src/expr.c:2461:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v55; // [rsp+4Ch] [rbp-34h] 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/emit_group_load/src/expr.c:2531:17: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v22 = ( __int64)v15[1]; 
                ^~~~~~
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/emit_group_load/src/expr.c:2581:24: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v28.rtwint = ( __int64)v15->fld[v17 != 0]; 
                       ^~~~~~~~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/emit_group_load/src/expr.c:2598:28: error: use of undeclared identifier 'machine_mode'
v27 = assign_stack_temp( ( machine_mode)v26, mode_size[v26], 0); 
                           ^
9 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/emit_group_load/src/obj/expr.o] Error 1
